# Sensetime_Robot

./: README.md  zsh shell 炫酷界面
Docker_other/: git_usage.txt  run_docker_image.sh
ROS2.0/: readme.txt
ROS2.0/ros2_ws/src/test_pkg/: package.xml  setup.cfg
ROS2.0/ros_ws/src/image_source/: CMakeLists.txt  image_source_video.py  package.xml
ROS2.0/ros_ws/src/test_efficiency/: CMakeLists.txt
Work_Notes/: CLion编译ROS工程.odt  vs_code直接编译cpp.odt  vs_code编译CMake文件.txt
Work_Notes/Docker_Git_Other_Usage/: docker_someUse.txt  git_usage.txt  run_docker_image_ros2.sh
Work_Notes/Docker_Git_Other_Usage/DockeRobot-master/: .gitignore  README.md
Work_Notes/Docker_Git_Other_Usage/DockeRobot-master/gophield/: Dockerfile
Work_Notes/Docker_Git_Other_Usage/DockeRobot-master/mower-env/: Dockerfile-cuda10.0  Dockerfile-cuda9.0  mower-docker-image-v0.1.md
Work_Notes/Docker_Git_Other_Usage/DockeRobot-master/robot-env/: Dockerfile  Dockerfile-cuda10.0-py2-ubuntu16.04  Dockerfile.19.02-no-ros  Dockerfile.nvidia-pytorch-gl  Dockerfile.ros
Work_Notes/Docker_Git_Other_Usage/some c++语法操作/:  explicit.txt  Vector容器.txt  automic原子操作.txt  group if函数使用.txt  make_pair.txt  template<typename T>.txt
Work_Notes/Docker_Git_Other_Usage/some_Dockerfile/: Dockerfile  Dockerfile_CI  build_docker.sh
Work_Notes/Docker_other/: Docker安装_Sensetime.md  docker_someUse.txt  run_docker_image_melodic.sh  家铭.txt
Work_Notes/Docker_other/some c++语法操作/: auto &a:b.txt  std::汇总.txt  字符与数值互转.txt
Work_Notes/ROS2.0-note/: .~lock.Test Cases _ Results for ROS2 as middleware_v2.0.docx#  .一个非常好的ROS节点启动与停止控制脚本.sh.swp  ROS2_test_v1.0_2020.1.3.txt  Test Cases _ Results for ROS2 as middleware_v2.0.docx  opencv版本.txt  ros2.0_dasing_install.txt  ros时间延迟测量方法.txt  test_start_stop_all.sh  test_time.txt  一个非常好的ROS节点启动与停止控制脚本.sh  一篇ROS1与ROS2对比翻译文.txt  安装.txt  报错解决.txt  用法语法.txt
Work_Notes/ROS2.0/ros2_ws/: gmon.out
Work_Notes/ROS2.0/ros2_ws/src/test_pkg/: CMakeLists.txt  setup.py
Work_Notes/ROS2.0/ros2_ws/src/test_pkg/launch/: image_source_video.launch  image_source_video_test.launch.py  talker.launch.py  talker_listener.launch.py
Work_Notes/ROS2.0/ros2_ws/src/test_pkg/src/: D2cpp.cpp  D3cpp.cpp  L3.cpp  talker2.cpp
Work_Notes/ShareMemory/: 共享内存终端函数.odt
Work_Notes/ShareMemory/linsc_robot_demo_shm_ros_ws/: readme.txt
Work_Notes/ShareMemory/linsc_robot_demo_shm_ros_ws/src/ca_driver/: CMakeLists.txt
Work_Notes/ShareMemory/linsc_robot_demo_shm_ros_ws/src/ca_driver/include/create_driver/: create_driver (another copy).h  create_driver.h
Work_Notes/ShareMemory/linsc_robot_demo_shm_ros_ws/src/ca_driver/src/: create_driver_shm.cpp
Work_Notes/ShareMemory/old_demo/: CMakeLists.txt  publish_3msg_pic_proto.cpp
Work_Notes/ShareMemory/protobuf/: protobuf2.6.1安装教程.txt  proto编译运行步骤.txt  序列化与反序列化.odt
Work_Notes/ShareMemory/生成共享库/: 共享库的制作步骤.odt
Work_Notes/gtest/: Error_Debug.txt  gtest.txt  perception_node.cpp
Work_Notes/gtest/区别/: TEST与TEST_F.txt
Work_Notes/shareMemory/demo/: shm_master.cpp  subscribe_3msg_pic_proto.cpp  如何运行.txt
Work_Notes/shareMemory/protobuf/: msg.proto  msg_pic.proto
Work_Notes/xavier_dockerfile/: Docker Hub账户密码.txt  linsc_xavier_Image_x86编译教程.txt  nvidia账户密码.txt  所报错误汇总.txt
Work_Notes/xavier_dockerfile/xavier/: Dockerfile
Work_Notes/zeromq/: nanomsg.txt  note.txt  version.cpp  zeromq安装教程.txt  zeromq的使用及语法教程.txt  性能测试.txt
Work_Notes/zeromq/test/: 编译方法.txt
Work_Notes/好东西安装/: Apollo  Qt打包发布  ROS常用指令  catvehicle  github好东西  lidar_config  ros install   sources.list  tensorflow  udacity  读取Robosense雷达
Work_Notes/好东西安装/teb_local_planner安装/: teb_local_planner安装及使用教程.txt
Work_Notes/好东西安装/系统指令及相关用法/: C++捕捉ctrl+c终端指令.cpp  cuda信息查看  python2与3切换  top交互命令.txt  商汤婉婷炫酷zsh.txt  查看cpu个数.txt  查看串口号rule  查询系统版本信息.txt  确认tensorflow是GPU还是CPU
Work_Notes/好东西安装/问题解决/: import cv2出错  ubuntu登录界面出现蓝花屏问题.txt  源问题解决  误删lsb_release
Work_Notes/婉婷/: robot_localization.pptx
Work_Notes/文钧/: delete_shm_all.sh  git.txt  nautils.txt  全覆盖路径规划比较好的参考例程  文均shm.txt  文钧给的参考共享内存与消息队列链接.txt  文钧骚操作网页.txt  高精度时钟测量.txt
Work_Notes/文钧/dengwenjun_old_ws/: run.txt
Work_Notes/文钧/json/: demo.json  gos_config.json  安装nlohman_json.txt
Work_Notes/文钧/wenjun_robot_demo_shm_ros_ws/: readme.txt
Work_Notes/文钧/wenjun_shm_src/gos-refactor/: CMakeLists.txt  delete_shm_all.sh
Work_Notes/文钧/wenjun_shm_src/gos-refactor/include/: node.hpp  publisher.hpp  subscriber.hpp  type.hpp
Work_Notes/文钧/wenjun_shm_src/gos-refactor/src/: node.cpp
Work_Notes/文钧/wenjun_shm_src/gos-refactor/test/: publisher_test.cpp  subscriber_test.cpp
Work_Notes/文钧/wenjun_shm_src/gos-refactor/test/config/: config.json
Work_Notes/文钧/wenjun_shm_src/gos-refactor/test/msg/: vel.pb.cc  vel.pb.h
Work_Notes/文钧/wenjun_shm_src/gos-refactor/test/msg_proto/: vel.proto
Work_Notes/文钧/wenjun_shm_src/kmw/: CMakeLists.txt
Work_Notes/文钧/wenjun_shm_src/kmw/include/: await.h  node.hpp  publisher.hpp  subscriber.hpp  type.hpp
Work_Notes/文钧/wenjun_shm_src/kmw/src/: node.cpp
Work_Notes/文钧/wenjun_shm_src/kmw/test/: publisher_test.cpp  subscriber_test.cpp
Work_Notes/文钧/wenjun_shm_src/kmw/test/config/: config.json
Work_Notes/文钧/wenjun_shm_src/kmw/test/msg/: vel.pb.cc  vel.pb.h
Work_Notes/文钧/wenjun_shm_src/kmw/test/msg_proto/: vel.proto
Work_Notes/有炼/apf_demo_with_detection_ros_ws/src/detection/: CMakeLists.txt  package.xml
Work_Notes/有炼/apf_demo_with_detection_ros_ws/src/detection/camera_para/: distortion.txt  homography.txt  intrinsic.txt
Work_Notes/有炼/apf_demo_with_detection_ros_ws/src/detection/include/: base_engine.h  common.h  get_image.h  oap_net.h  utils.h
Work_Notes/有炼/apf_demo_with_detection_ros_ws/src/detection/include/util/: counter.h
Work_Notes/有炼/apf_demo_with_detection_ros_ws/src/detection/launch/: .detection.launch.swp  detection.launch
Work_Notes/有炼/apf_demo_with_detection_ros_ws/src/detection/src/: base_engine.cpp  get_image.cpp  inference.cpp  oap_net.cpp  utils.cpp
Work_Notes/有炼/apf_demo_with_detection_ros_ws/src/detection/src/util/: counter.cc
Work_Notes/鹏辉/: start-gmapping.sh  start-loca.sh  start-map.sh
(+324 files in other folders)
